--- a/ch3.tex
+++ b/ch3.tex
@@ -274,3 +274,13 @@
 
   Observe that~$\textnormal{(a)}\Rightarrow\textnormal{(b)}\Rightarrow\textnormal{(c)}\Rightarrow\textnormal{(a)}$ is possible as well using the definition of compatible germs and their correspondence with sheaves. For this chain of implications to be easy to proof we do need the sheaf condition though.
 \end{exercise}
+
+\begin{exercise}
+  By the observations from~\autoref{exercise:34g} and the construction of the sheafification, all the properties are defined on the level of stalks. If~$\phi$ is an epimorphism, this holds for the products of stalks, implying epimorphisms on each stalk and the other direction is analogous.
+\end{exercise}
+
+\begin{exercise}
+  The map~$\exp\colon\mathcal{O}_X\to\mathcal{O}_X^*$ is an epimorphism: at the level of the stalks we have for a nowhere zero~$g$ that~$g$ is nowhere zero in a neighbourhood of~$x$, which can be taken as a representative and which admits a local logarithm.
+
+  But if we take a open neighbourhood of zero and puncture it there (or more general: any open set that is not contractible) we can construct a function that is nowhere zero, but is not in the image of~$\exp$: the winding number causes the function~$z\mapsto z$ to be an section of~$\mathcal{O}_X^*$ but there is no section in~$\mathcal{O}_X$ mapping to it.
+\end{exercise}
