Added a label to 2.5.D

--- a/ch2.tex
+++ b/ch2.tex
@@ -411,6 +411,7 @@ There are no exercises in this section.
 \end{exercise}
 
 \begin{exercise}
+  \label{exercise:25d}
   It just boils down to unwinding the diagram from~\autoref{exercise:25a}. Set~$F\colonequals-\otimes_A N$ and~$G\colonequals\Hom_A(N,-)$, $A\colonequals M$, $A'\colonequals M'$, $B\colonequals P$ and~$B'\colonequals P'$. Now taking~$h\colon M'\otimes_A N\to P$, chasing the diagram using~$\tau_{A,B}\circ Ff^*$ we obtain~$h\circ (f\otimes\identity)(-_M\otimes-_N)$ first and then~$h(f(-_M))(-_N)$.
 
   Chasing the diagram in the other direction, through~$f^*\circ\tau_{A',B}$ we first obtain~$h(-_M)(-_N)$ and then end up with~$h(f(-_M))(-_N)$, hence equality. The rest is analogous, now you have to compose with the map~$g\colon B\to B'$.
