--- a/solutions.tex
+++ b/solutions.tex
@@ -83,6 +83,7 @@
 \DeclareMathOperator\homology{H}
 \DeclareMathOperator\image{im}
 \DeclareMathOperator\Mor{Mor}
+\DeclareMathOperator\pre{pre}
 \DeclareMathOperator\res{res}
 \DeclareMathOperator\sh{sh}
 \DeclareMathOperator\SheafHom{\mathcal{H}om}
