Fixed some labeling

--- a/ch2.tex
+++ b/ch2.tex
@@ -314,11 +314,11 @@ There are no exercises in this section.
 \end{exercise}
 
 \begin{exercise}
-  \label{exercise:23b}
+  \label{exercise:24b}
   \begin{enumerate}
-    \item The rational numbers~$\mathbb{Q}$ is the object that captures all of the information contained in the~$\frac{1}{n}\mathbb{Z}$. We define a morphism~$\frac{1}{n}\mathbb{Z}\to\frac{1}{m}\mathbb{Z}$ is~$n\divides m$, by~$\frac{z}{n}\mapsto\frac{(m/n)z}{m}$. The remark in the notes after~\autoref{exercise:23c} is helpful in this respect.
+    \item The rational numbers~$\mathbb{Q}$ is the object that captures all of the information contained in the~$\frac{1}{n}\mathbb{Z}$. We define a morphism~$\frac{1}{n}\mathbb{Z}\to\frac{1}{m}\mathbb{Z}$ is~$n\divides m$, by~$\frac{z}{n}\mapsto\frac{(m/n)z}{m}$. The remark in the notes after~\autoref{exercise:24c} is helpful in this respect.
 
-    \item\label{enumerate:23b-b} Take subsets~$A_j$ and~$A_k$ of~$A$ such that~$m\colon A_j\hookrightarrow A_k$ is the obvious inclusion map (if it exists). The diagram becomes
+    \item\label{enumerate:24-b} Take subsets~$A_j$ and~$A_k$ of~$A$ such that~$m\colon A_j\hookrightarrow A_k$ is the obvious inclusion map (if it exists). The diagram becomes
       \begin{equation}
         \begin{tikzpicture}[description/.style = {fill = white, inner sep = 2pt}, baseline=(current bounding  box.center)]
           \matrix (m) [matrix of math nodes, row sep = 3em, column sep = 3em, text height = 1.5ex, text depth = 0.25ex]
@@ -338,8 +338,8 @@ There are no exercises in this section.
 \end{exercise}
 
 \begin{exercise}
-  \label{exercise:23c}
-  Extending the answer to~\autoref{exercise:23b}\ref{enumerate:23b-b} we see that the maps out of~$\varinjlim_{\mathcal{I}}A_i$ are defined uniquely by this quotient of the disjoint union.
+  \label{exercise:24c}
+  Extending the answer to~\autoref{exercise:24b}\ref{enumerate:24-b} we see that the maps out of~$\varinjlim_{\mathcal{I}}A_i$ are defined uniquely by this quotient of the disjoint union.
 \end{exercise}
 
 \begin{exercise}
