--- a/solutions.tex
+++ b/solutions.tex
@@ -87,6 +87,7 @@
 \DeclareMathOperator\res{res}
 \DeclareMathOperator\sh{sh}
 \DeclareMathOperator\SheafHom{\mathcal{H}om}
+\DeclareMathOperator\Supp{Supp}
 
 \title{Solutions to Foundations of Algebraic Geometry}
 \author{Pieter Belmans}
