--- a/ch4.tex
+++ b/ch4.tex
@@ -51,7 +51,11 @@
 \end{exercise}
 
 \begin{exercise}
-  I have used this fact in~\autoref{exercise:42a}\ref{enumerate:42a-a}. It boils down to~$A/J\cong (A/I)(J/I)$ where~$I\subseteq J$ are prime ideals of~$A$, and this is equivalent to~$\overline{J}$ being prime in~$A/I$.
+  I have used this fact in~\autoref{exercise:42a}\ref{enumerate:42a-a}. It boils down to
+  \begin{equation}
+    A/J\cong (A/I)/(J/I) 
+  \end{equation}
+  where~$I\subseteq J$ are prime ideals of~$A$, and this is equivalent to~$\overline{J}$ being prime in~$A/I$.
 \end{exercise}
 
 \begin{exercise} % TODO rewrite this
