--- a/solutions.tex
+++ b/solutions.tex
@@ -14,8 +14,8 @@
 \usepackage{xspace}
 
 \usepackage{tgpagella}
-\usepackage[sc]{mathpazo}
-%\usepackage{euler}
+%\usepackage[sc]{mathpazo}
+\usepackage{euler}
 \usepackage{microtype}
 
 \chapterstyle{companion}
