Section 4.3 was easy, don't you think?

--- a/ch4.tex
+++ b/ch4.tex
@@ -128,3 +128,8 @@
   \end{equation}
   because every term containing~$\epsilon^2$ is gone. If we move the first term of the inner sum to the left-hand side and dividing both sides by~$\epsilon$ (which isn't really possible, but for the sake of argument we can assume this), we see the fact~$(x^n)'=nx^{n-1}$.
 \end{exercise}
+
+
+\section{Visualing schemes I: generic points}
+
+There are no exercises in this section.
